changelogs when making a new release, docs/changelog.txt in the dfhack repo must
have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools
- `autocheese`: automatically make cheese using barrels that have accumulated sufficient milk

## New Features

## Fixes
- `advtools`: fix dfhack-added conversation options not appearing in the ask whereabouts conversation tree
- `gui/rename`: fix error when changing the language of a unit's name

## Misc Improvements
- `assign-preferences`: new ``--show`` option to display the preferences of the selected unit
- `pref-adjust`: new ``show`` command to display the preferences of the selected unit
- `hide-tutorials`: if enabled, also hide tutorial popups for adventure mode
- `hide-tutorials`: new ``reset`` command that will re-enable popups in the current game

## Removed

# 51.02-r1

## Fixes
- `deathcause`: fix error when retrieving the name of a historical figure

# 50.15-r2

## New Tools
- `fix/stuck-squad`: allow squads and messengers returning from missions to rescue squads that have gotten stuck on the world map
- `gui/rename`: (reinstated) give new in-game language-based names to anything that can be named (units, governments, fortresses, the world, etc.)

## New Features
- `gui/settings-manager`: new overlay on the Labor -> Standing Orders tab for configuring the number of barrels to reserve for job use (so you can brew alcohol and not have all your barrels claimed by stockpiles for container storage)
- `gui/settings-manager`: standing orders save/load now includes the reserved barrels setting
- `gui/rename`: add overlay to worldgen screen allowing you to rename the world before the new world is saved
- `gui/rename`: add overlay to the "Prepare carefully" embark screen that transparently fixes a DF bug where you can't give units nicknames or custom professions