@@ -28,6 +28,7 @@ Template for new versions:
 
 ## New Tools
 - `autocheese`: automatically make cheese using barrels that have accumulated sufficient milk
+- `advtools`: new overlay ``advtools fastcombat``, while active it allows you to instantly skip many combat actions
 
 ## New Features
 
